Attempt to migrate to Webpack 5.

--- a/package.json
+++ b/package.json
@@ -23,27 +23,29 @@
         "@types/knockout.validation": "0.0.38",
         "@types/mime": "^2.0.3",
         "autoprefixer": "10.4.0",
-        "clean-webpack-plugin": "2.0.2",
-        "copy-webpack-plugin": "^6.2.1",
-        "css-loader": "5.0.0",
-        "file-loader": "^6.1.1",
-        "html-loader": "^1.3.2",
-        "mini-css-extract-plugin": "^1.6.0",
+        "buffer": "^6.0.3",
+        "clean-webpack-plugin": "4.0.0",
+        "copy-webpack-plugin": "^10.0.0",
+        "css-loader": "6.5.1",
+        "file-loader": "^6.2.0",
+        "html-loader": "^3.0.1",
+        "mini-css-extract-plugin": "^2.4.5",
         "path": "^0.12.7",
-        "postcss-loader": "^4.0.4",
+        "postcss-loader": "^6.2.1",
         "raw-loader": "^4.0.2",
-        "sass": "^1.43.4",
-        "sass-loader": "10.1.1",
-        "style-loader": "2.0.0",
-        "terser": "5.9.0",
-        "terser-webpack-plugin": "4.1.0",
-        "ts-loader": "^8.3.0",
+        "sass": "^1.44.0",
+        "sass-loader": "12.3.0",
+        "stream-browserify": "^3.0.0",
+        "style-loader": "3.3.1",
+        "terser": "5.10.0",
+        "terser-webpack-plugin": "5.2.5",
+        "ts-loader": "^9.2.6",
         "typescript": "4.5.2",
         "url-loader": "4.1.1",
-        "webpack": "4.44.1",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "3.11.0",
-        "webpack-merge": "^5.1.2"
+        "webpack": "5.64.4",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "4.6.0",
+        "webpack-merge": "^5.8.0"
     },
     "dependencies": {
         "@paperbits/common": "0.1.468",
@@ -56,7 +58,7 @@
         "@paperbits/prosemirror": "0.1.468",
         "@paperbits/styles": "0.1.468",
         "@webcomponents/custom-elements": "^1.5.0",
-        "core-js": "^3.19.1",
+        "core-js": "^3.19.2",
         "knockout": "^3.5.1",
         "knockout-mapping": "^2.6.0",
         "knockout.validation": "^2.0.4"
