--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-    name: YouTube-Videos-As-Posts
+    name: YouTube-Channel-Videos-As-Website
     description: Publish YouTube Videos As Posts in Website automatically
     author: SSanjeevi
      
@@ -20,5 +20,5 @@
       steps:
         - run: python -m pip install PyGithub  # Installing dependencies
           shell: bash
-        - run: python ${{ github.action_path }}/youtubeChannelVideosFinder.py -k ${{ inputs.GoogleApiKey }} -c '${{ inputs.channelName }}' --output-file-path '${{ github.workspace }}' -i 700
+        - run: python ${{ github.action_path }}/youtubeChannelVideosFinder.py -k ${{ inputs.GoogleApiKey }} -c '${{ inputs.channelName }}' --output-file-path '${{ github.workspace }}src/data/demo.json' --title 'Videos' -i 700
           shell: bash
